fixed bug that squished code together

--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -52,7 +52,7 @@ h1 {
   color: #334B6F;
 }
 
-img {
+.favRedirectButton {
   width: 50px;
   height: 50px;
 }
